Pulizia della classe DynamicGTFS